--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,182 @@
+<!-- In production we should using separate module and using vue build tools, and maybe using webpack or vite or maybe using Framework like Nuxt.js -->
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8" />
-    <title>single page react boilerplate</title>
-  </head>
+    <title>Single Page Vue.js Application</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head>
+<body>
+    <div id="vue-app"></div>
 
-  <body>
-    <div id="react-app"></div>
-
-    <!-- TODO convert to Nuxt / Vue 3 -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script
-      src="https://unpkg.com/react@16/umd/react.development.js"
-      crossorigin
-    ></script>
-    <script
-      src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
-      crossorigin
-    ></script>
-    <script type="text/babel">
-      // TODO typescript?
-      var App = (props) => {
-        const [count, setCount] = React.useState(0);
-        // TODO CRUD diseases or medicine outgoing depending on your preferred test
-        axios.get('/route?').then((res, err) => {
-          setCount(res.data.length);
-        });
-        // TODO how do you (unit) test frontend code?
-        return <div>Data count: {count}</div>;
-      };
-      ReactDOM.render(<App />, document.getElementById('react-app'));
+    <script src="https://unpkg.com/vue@next"></script>
+
+    <script>
+      const { createApp, ref, reactive, onMounted } = Vue;
+
+      createApp({
+        setup() {
+          const diseases = ref([]);
+          const patients = ref([]);
+          const newDisease = reactive({ name: '', picture: '', patientId: '' });
+          const selectedDisease = reactive({ id: null, name: '', picture: '', patientId: '' });
+
+          const editDisease = (disease) => {
+            selectedDisease.id = disease.id;
+            selectedDisease.name = disease.name;
+            selectedDisease.picture = disease.picture;
+            selectedDisease.patientId = disease.patientId;
+          };
+
+          const fetchPatients = async () => {
+            try {
+              const response = await axios.get('/api/patients');
+              patients.value = response.data.data;
+            } catch (error) {
+              console.error('Error fetching patients:', error);
+            }
+          };
+
+          const fetchDiseases = async () => {
+            try {
+              const response = await axios.get('/api/diseases');
+              diseases.value = response.data.data;
+            } catch (error) {
+              console.error(error);
+            }
+          };
+
+          const addDisease = async () => {
+            try {
+              await axios.post('/api/diseases', newDisease);
+              fetchDiseases();
+            } catch (error) {
+              console.error(error);
+            }
+          };
+
+          const updateDisease = async () => {
+            try {
+              await axios.put(`/api/diseases/${selectedDisease.id}`, selectedDisease);
+              fetchDiseases();
+              clearSelectedDisease();
+            } catch (error) {
+              console.error(error);
+            }
+          };
+
+          const deleteDisease = async (id) => {
+            try {
+              await axios.delete(`/api/diseases/${id}`);
+              fetchDiseases();
+            } catch (error) {
+              console.error(error);
+            }
+          };
+
+          const clearSelectedDisease = () => {
+            selectedDisease.id = null;
+            selectedDisease.name = '';
+            selectedDisease.picture = '';
+            selectedDisease.patientId = '';
+          };
+
+          onMounted(() => {
+            fetchDiseases();
+            fetchPatients();
+          });
+
+          return {
+            diseases,
+            patients,
+            newDisease,
+            selectedDisease,
+            addDisease,
+            updateDisease,
+            deleteDisease,
+            clearSelectedDisease,
+            editDisease,
+          };
+        },
+        template: `
+          <div class="container mx-auto p-4">
+            <div class="mb-8">
+                <h2 class="font-bold text-lg mb-3">Add Disease</h2>
+                <input v-model="newDisease.name" placeholder="Name" class="border p-2 rounded mr-2">
+                <input v-model="newDisease.picture" placeholder="Picture" class="border p-2 rounded mr-2">
+                <select v-model="newDisease.patientId" class="border p-2 rounded mr-2">
+                  <option value="" disabled>Select patient</option>
+                  <option v-for="patient in patients" :value="patient.id" :key="patient.id">
+                    {{ patient.name }}
+                  </option>
+                </select>
+                <button @click="addDisease" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Add</button>
+            </div>
+
+            <div class="mt-8">
+              <h2 class="font-bold text-lg mb-3">Diseases</h2>
+              <ul>
+                <li v-for="disease in diseases" :key="disease.id" class="mb-4 p-4 bg-white rounded-lg shadow-md">
+                  <div class="flex items-center justify-between">
+                    <div>
+                      <h4 class="text-xl font-semibold mb-2">{{ disease.name }}</h4>
+                      <p class="text-gray-600">Patient: 
+                        <span v-if="disease.patientName">
+                          {{ disease.patientName }}
+                        </span>
+                        <span v-else class="text-gray-500">
+                          Unknown
+                        </span>
+                      </p>
+                      <p class="text-gray-600">Age: 
+                        <span v-if="disease.patientAge">
+                          {{ disease.patientAge }}
+                        </span>
+                        <span v-else class="text-gray-500">
+                          Unknown
+                        </span>
+                      </p>
+                    </div>
+                    <div>
+                      <button @click="editDisease(disease)" class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-1 px-3 rounded ml-2 mr-2">Edit</button> 
+                      <button @click="deleteDisease(disease.id)" class="bg-red-500 hover:bg-red-600 text-white font-bold py-1 px-3 rounded">Delete</button>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+
+            <!-- Edit Disease Modal -->
+            <div v-if="selectedDisease.id" class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full" id="my-modal" @click="clearSelectedDisease">
+              <div class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-md bg-white" @click.stop>
+                <div class="mt-3 text-center">
+                  <h3 class="text-lg leading-6 font-medium text-gray-900">Edit Disease</h3>
+                  <div class="mt-2 px-7 py-3">
+                    <input v-model="selectedDisease.name" placeholder="Name" class="border p-2 rounded w-full mb-3">
+                    <input v-model="selectedDisease.picture" placeholder="Picture" class="border p-2 rounded w-full mb-3">
+                    <select v-model="selectedDisease.patientId" class="border p-2 rounded mr-2">
+                      <option value="" disabled>Select patient</option>
+                      <option v-for="patient in patients" :value="patient.id" :key="patient.id">
+                        {{ patient.name }}
+                      </option>
+                    </select>
+                  </div>
+                  <div class="items-center px-4 py-3">
+                    <button @click="updateDisease" class="px-4 py-2 bg-green-500 text-white text-base font-medium rounded-md w-full shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-300">
+                      Update
+                    </button>
+                  </div>
+                  <div class="items-center px-4 py-3">
+                    <button @click="clearSelectedDisease" class="px-4 py-2 bg-gray-500 text-white text-base font-medium rounded-md w-full shadow-sm hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-gray-300">
+                      Cancel
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        `,
+      }).mount('#vue-app');
     </script>
-  </body>
+</body>
 </html>
